--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,24 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.MuiFormControl-root {
+  width: 100%;
+}
+
+.MuiInputBase-root {
+  width: 100%;
+}
+
+.MuiInputBase-input {
+  animation: none;
+  color: rgb(194, 208, 234) !important;
+  width: 100%;
+  background-color: #2a303c !important;
+  height: 2.5rem !important;
+  padding-left: 1rem !important;
+  padding-right: 1rem !important;
+  font-size: 0.875rem !important;
+  border-radius: var(--rounded-btn, 0.5rem) !important;
+  font-size: 0.875rem !important;
+}
